--- a/example-bvhViewer/example-bvhViewer.vcxproj.filters
+++ b/example-bvhViewer/example-bvhViewer.vcxproj.filters
@@ -22,6 +22,12 @@
 		<ClCompile Include="..\..\..\addons\ofxDigitalDance\src\ofxDigitalDanceBvh.cpp">
 			<Filter>addons\ofxDigitalDance\src</Filter>
 		</ClCompile>
+		<ClCompile Include="..\..\..\addons\ofxDigitalDance\src\ofxMotionRhythm.cpp">
+			<Filter>addons\ofxDigitalDance\src</Filter>
+		</ClCompile>
+		<ClCompile Include="..\..\..\addons\ofxDigitalDance\src\ofxWeightEffort.cpp">
+			<Filter>addons\ofxDigitalDance\src</Filter>
+		</ClCompile>
 	</ItemGroup>
 	<ItemGroup>
 		<Filter Include="src">
@@ -57,6 +63,12 @@
 			<Filter>addons\ofxDigitalDance\src</Filter>
 		</ClInclude>
 		<ClInclude Include="..\..\..\addons\ofxDigitalDance\src\ofxDigitalDanceBvh.h">
+			<Filter>addons\ofxDigitalDance\src</Filter>
+		</ClInclude>
+		<ClInclude Include="..\..\..\addons\ofxDigitalDance\src\ofxMotionRhythm.h">
+			<Filter>addons\ofxDigitalDance\src</Filter>
+		</ClInclude>
+		<ClInclude Include="..\..\..\addons\ofxDigitalDance\src\ofxWeightEffort.h">
 			<Filter>addons\ofxDigitalDance\src</Filter>
 		</ClInclude>
 	</ItemGroup>
